fixed alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -69,6 +69,14 @@ p {
   color: var(--pale-blue);
 }
 
+body {
+  height: 95vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .dashboard {
   display: grid;
   grid-template-columns: 1fr 3fr;
